[package]
name = "remove-markdown-links"
version = "0.1.0"
authors = ["GeckoEidechse"]
edition = "2021"

description = " Turns `[example](https://example.com)` into `example`. That's it "
repository = "https://github.com/GeckoEidechse/remove-markdown-links"
license = "MPL-2.0"
readme = "README.md"
keywords = [ "markdown" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
